<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffbot_core</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jungho@todo.todo">jungho</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>serial</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>

  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>

  <build_depend>diffbot_msgs</build_depend>
  <exec_depend>diffbot_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
